syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "clientToRingStubs";

package clientToRingService; // package do proto

service ClientToRingService {
    //Get next Prime ServerÂ«
    rpc getPrimeServer(google.protobuf.Empty) returns (PrimeInfo);
}


message  PrimeRegistInfo{
  string ip = 1;
  int32 port = 2;
}

message PrimeInfo{
  string uid = 1;
  PrimeRegistInfo serverInfo = 2;
}


